--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,16 +10,16 @@ publish = false
 autoexamples = false
 
 [dependencies]
-wasmer = { version = "=2.4.1", path = "lib/api", package = "wasmer-unc" }
-wasmer-compiler = { version = "=2.4.1", path = "lib/compiler", package = "wasmer-compiler-unc" }
+wasmer = { version = "=2.4.1", path = "lib/api", package = "wasmer-x" }
+wasmer-compiler = { version = "=2.4.1", path = "lib/compiler", package = "wasmer-compiler-x" }
 wasmer-compiler-cranelift = { version = "2.0.0", path = "lib/compiler-cranelift", optional = true }
-wasmer-compiler-singlepass = { version = "=2.4.1", path = "lib/compiler-singlepass", optional = true, package = "wasmer-compiler-singlepass-unc" }
+wasmer-compiler-singlepass = { version = "=2.4.1", path = "lib/compiler-singlepass", optional = true, package = "wasmer-compiler-singlepass-x" }
 wasmer-compiler-llvm = { version = "2.0.0", path = "lib/compiler-llvm", optional = true }
-wasmer-engine = { version = "=2.4.1", path = "lib/engine", package = "wasmer-engine-unc"  }
-wasmer-engine-universal = { version = "=2.4.1", path = "lib/engine-universal", optional = true, package = "wasmer-engine-universal-unc" }
+wasmer-engine = { version = "=2.4.1", path = "lib/engine", package = "wasmer-engine-x"  }
+wasmer-engine-universal = { version = "=2.4.1", path = "lib/engine-universal", optional = true, package = "wasmer-engine-universal-x" }
 wasmer-wast = { version = "2.0.0", path = "tests/lib/wast", optional = true }
-wasmer-types = { version = "=2.4.1", path = "lib/types", package = "wasmer-types-unc" }
-wasmer-vm = { version = "=2.4.1", path = "lib/vm", package = "wasmer-vm-unc" }
+wasmer-types = { version = "=2.4.1", path = "lib/types", package = "wasmer-types-x" }
+wasmer-vm = { version = "=2.4.1", path = "lib/vm", package = "wasmer-vm-x" }
 
 cfg-if = "1.0"
 
