--- a/lib/api/Cargo.toml
+++ b/lib/api/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "wasmer-unc"
+name = "wasmer-x"
 version = "2.4.1"
 description = "High-performance WebAssembly runtime"
 categories = ["wasm"]
@@ -26,17 +26,17 @@ wat = { version = "1.0", optional = true }
 # Dependencies and Development Dependencies for `sys`.
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 # - Mandatory dependencies for `sys`.
-wasmer-vm = { path = "../vm", version = "=2.4.1", package = "wasmer-vm-unc" }
-wasmer-compiler = { path = "../compiler", version = "=2.4.1", package = "wasmer-compiler-unc" }
-wasmer-derive = { path = "../derive", version = "=2.4.1", package = "wasmer-derive-unc" }
-wasmer-engine = { path = "../engine", version = "=2.4.1", package = "wasmer-engine-unc" }
-wasmer-types = { path = "../types", version = "=2.4.1", package = "wasmer-types-unc" }
+wasmer-vm = { path = "../vm", version = "=2.4.1", package = "wasmer-vm-x" }
+wasmer-compiler = { path = "../compiler", version = "=2.4.1", package = "wasmer-compiler-x" }
+wasmer-derive = { path = "../derive", version = "=2.4.1", package = "wasmer-derive-x" }
+wasmer-engine = { path = "../engine", version = "=2.4.1", package = "wasmer-engine-x" }
+wasmer-types = { path = "../types", version = "=2.4.1", package = "wasmer-types-x" }
 target-lexicon = { version = "0.12.2", default-features = false }
 # - Optional dependencies for `sys`.
-wasmer-compiler-singlepass = { path = "../compiler-singlepass", package = "wasmer-compiler-singlepass-unc", version = "=2.4.1", optional = true}
+wasmer-compiler-singlepass = { path = "../compiler-singlepass", package = "wasmer-compiler-singlepass-x", version = "=2.4.1", optional = true}
 wasmer-compiler-cranelift = { path = "../compiler-cranelift", version = "2.1.0", optional = true }
 wasmer-compiler-llvm = { path = "../compiler-llvm", version = "2.1.0", optional = true }
-wasmer-engine-universal = { path = "../engine-universal", package = "wasmer-engine-universal-unc", version = "=2.4.1", optional = true }
+wasmer-engine-universal = { path = "../engine-universal", package = "wasmer-engine-universal-x", version = "=2.4.1", optional = true }
 # - Mandatory dependencies for `sys` on Windows.
 [target.'cfg(all(not(target_arch = "wasm32"), target_os = "windows"))'.dependencies]
 winapi = "0.3"
