--- a/lib/compiler-llvm/Cargo.toml
+++ b/lib/compiler-llvm/Cargo.toml
@@ -12,9 +12,9 @@ readme = "README.md"
 edition = "2018"
 
 [dependencies]
-wasmer-compiler = { path = "../compiler", version = "=2.4.1", package = "wasmer-compiler-unc", features = ["translator"] }
-wasmer-vm = { path = "../vm", version = "=2.4.1", package = "wasmer-vm-unc" }
-wasmer-types = { path = "../types", version = "=2.4.1", package = "wasmer-types-unc" }
+wasmer-compiler = { path = "../compiler", version = "=2.4.1", package = "wasmer-compiler-x", features = ["translator"] }
+wasmer-vm = { path = "../vm", version = "=2.4.1", package = "wasmer-vm-x" }
+wasmer-types = { path = "../types", version = "=2.4.1", package = "wasmer-types-x" }
 target-lexicon = { version = "0.12.2", default-features = false }
 smallvec = "1.6"
 object = { version = "0.27", default-features = false, features = ["read"] }
