--- a/lib/engine/Cargo.toml
+++ b/lib/engine/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "wasmer-engine-unc"
+name = "wasmer-engine-x"
 version = "2.4.1"
 description = "Wasmer Engine abstraction"
 categories = ["wasm"]
@@ -14,9 +14,9 @@ edition = "2018"
 name = "wasmer_engine"
 
 [dependencies]
-wasmer-types = { path = "../types", version = "=2.4.1", package = "wasmer-types-unc" }
-wasmer-compiler = { path = "../compiler", version = "=2.4.1", package = "wasmer-compiler-unc" }
-wasmer-vm = { path = "../vm", version = "=2.4.1", package = "wasmer-vm-unc" }
+wasmer-types = { path = "../types", version = "=2.4.1", package = "wasmer-types-x" }
+wasmer-compiler = { path = "../compiler", version = "=2.4.1", package = "wasmer-compiler-x" }
+wasmer-vm = { path = "../vm", version = "=2.4.1", package = "wasmer-vm-x" }
 target-lexicon = { version = "0.12.2", default-features = false }
 # flexbuffers = { path = "../../../flatbuffers/rust/flexbuffers", version = "0.1.0" }
 backtrace = "0.3"
