--- a/lib/types/Cargo.toml
+++ b/lib/types/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "wasmer-types-unc"
+name = "wasmer-types-x"
 version = "2.4.1"
 description = "Wasmer Common Types"
 categories = ["wasm", "no-std", "data-structures"]
