chore: Update package names to use "wasmer-runtime-core-x" instead of "wasmer-runtime-core-near" in Cargo.toml files

--- a/examples/parallel/Cargo.toml
+++ b/examples/parallel/Cargo.toml
@@ -10,5 +10,5 @@ license = "MIT"
 [dependencies]
 rayon = "1.2"
 time = "0.1"
-wasmer-runtime = { path = "../../lib/runtime", package = "wasmer-runtime-near" }
-wasmer-runtime-core = { path = "../../lib/runtime-core", package = "wasmer-runtime-core-near" }
+wasmer-runtime = { path = "../../lib/runtime", package = "wasmer-runtime-x" }
+wasmer-runtime-core = { path = "../../lib/runtime-core", package = "wasmer-runtime-core-x" }
