--- a/lib/runtime/Cargo.toml
+++ b/lib/runtime/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "wasmer-runtime-near"
+name = "wasmer-runtime-x"
 version = "0.18.0"
 description = "Wasmer runtime library"
 license = "MIT"
@@ -11,14 +11,14 @@ edition = "2018"
 readme = "README.md"
 
 [dependencies]
-wasmer-singlepass-backend = { path = "../singlepass-backend", version = "0.18.0", optional = true, package = "wasmer-singlepass-backend-near" }
+wasmer-singlepass-backend = { path = "../singlepass-backend", version = "0.18.0", optional = true, package = "wasmer-singlepass-backend-x" }
 lazy_static = "1.4"
 memmap = "0.7"
 
 [dependencies.wasmer-runtime-core]
 path = "../runtime-core"
 version = "0.18.0"
-package = "wasmer-runtime-core-near"
+package = "wasmer-runtime-core-x"
 
 [dependencies.wasmer-clif-backend]
 path = "../clif-backend"
