--- a/lib/singlepass-backend/Cargo.toml
+++ b/lib/singlepass-backend/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "wasmer-singlepass-backend-near"
+name = "wasmer-singlepass-backend-x"
 version = "0.18.0"
 repository = "https://github.com/wasmerio/wasmer"
 description = "Wasmer runtime single pass compiler backend"
@@ -11,7 +11,7 @@ edition = "2018"
 readme = "README.md"
 
 [dependencies]
-wasmer-runtime-core = { path = "../runtime-core", version = "0.18.0", package = "wasmer-runtime-core-near" }
+wasmer-runtime-core = { path = "../runtime-core", version = "0.18.0", package = "wasmer-runtime-core-x" }
 dynasm = "1.0.0"
 dynasmrt = "1.0.0"
 lazy_static = "1.4"
