--- a/lib/api/Cargo.toml
+++ b/lib/api/Cargo.toml
@@ -12,13 +12,13 @@ license = "MIT"
 
 [dependencies]
 serde = { version = "1", features = ["derive"] }
-wasmer-runtime-core = { version = "0.18.1", path = "../runtime-core", package = "wasmer-runtime-core-near" }
+wasmer-runtime-core = { version = "0.18.1", path = "../runtime-core", package = "wasmer-runtime-core-x" }
 
 [dependencies.wasmer-singlepass-backend]
 path = "../singlepass-backend"
 version = "0.18.1"
 optional = true
-package = "wasmer-singlepass-backend-near"
+package = "wasmer-singlepass-backend-x"
 
 [dependencies.wasmer-llvm-backend]
 path = "../llvm-backend"
