--- a/lib/runtime-c-api/Cargo.toml
+++ b/lib/runtime-c-api/Cargo.toml
@@ -26,7 +26,7 @@ version = "0.17.1"
 default-features = false
 path = "../runtime-core"
 version = "0.18.1"
-package = "wasmer-runtime-core-near"
+package = "wasmer-runtime-core-x"
 
 [dependencies.wasmer-wasi]
 default-features = false
